Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: 10.5.0, 10.6.0, 10.6.4
-
Component/s: Storage Engine - InnoDB
-
Labels:
-
Environment:n.a.
Description
Typo: "mach" instead of "match":
Create table `test`.`employee` with foreign key `fk_team` constraint failed. Field type or character set for column 'team_id' does not mach referenced
To me fixed in the following files:
mysql-test/suite/innodb/r/innodb-fk-warnings.result:Warning 150 Create table `test`.`t2` with foreign key (a) constraint failed. Field type or character set for column 'a' does not mach referenced column 'f1'.
storage/innobase/handler/ha_innodb.cc: "does not mach referenced column '%s'.",
Attachments
Issue Links
- is caused by
-
MDEV-20480 Obsolete internal parser for FK in InnoDB
-
- Closed
-