MDEV-26439 Typo in Foreign Key error message

foreign_push_index_error(): Fix a typo of 'match' that was introduced
in commit 5130f5206c150ba1e8a723aae63884ff64408012 (MDEV-20480).

Thanks to Oli Sennhauser for reporting this.